--- a/student_intervention/student_intervention.ipynb
+++ b/student_intervention/student_intervention.ipynb
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 65,
    "metadata": {
     "collapsed": false
    },
@@ -99,7 +99,7 @@
      "output_type": "stream",
      "text": [
       "Total number of students: 395\n",
-      "Number of features: 31\n",
+      "Number of features: 30\n",
       "Number of students who passed: 265\n",
       "Number of students who failed: 130\n",
       "Graduation rate of the class: 67.09%\n"
@@ -112,7 +112,7 @@
     "n_students = len(student_data)\n",
     "\n",
     "# TODO: Calculate number of features\n",
-    "n_features = len(student_data.columns)\n",
+    "n_features = len(student_data.columns) - 1\n",
     "\n",
     "# TODO: Calculate passing students\n",
     "n_passed = len(student_data [student_data['passed'] == \"yes\"] )\n",
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 66,
    "metadata": {
     "collapsed": false
    },
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 67,
    "metadata": {
     "collapsed": false
    },
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 68,
    "metadata": {
     "collapsed": false
    },
@@ -288,8 +288,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training set has 237 samples.\n",
-      "Testing set has 158 samples.\n"
+      "Training set has 300 samples.\n",
+      "Testing set has 95 samples.\n"
      ]
     }
    ],
@@ -304,7 +304,7 @@
     "num_test = X_all.shape[0] - num_train\n",
     "\n",
     "# TODO: Shuffle and split the dataset into the number of training and testing points above\n",
-    "spl = cross_validation.train_test_split(X_all, y_all, test_size=0.4,) \n",
+    "spl = cross_validation.train_test_split(X_all, y_all, train_size = 300, random_state=42) \n",
     "\n",
     "X_train = spl[0]\n",
     "X_test = spl[1]\n",
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 70,
    "metadata": {
     "collapsed": false
    },
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 71,
    "metadata": {
     "collapsed": false
    },
@@ -477,59 +477,59 @@
      "output_type": "stream",
      "text": [
       "Training a GaussianNB using a training set size of 100. . .\n",
+      "Trained model in 0.0020 seconds\n",
+      "Made predictions in 0.0000 seconds.\n",
+      "F1 score for training set: 0.8467.\n",
+      "Made predictions in 0.0010 seconds.\n",
+      "F1 score for test set: 0.8029.\n",
+      "Training a GaussianNB using a training set size of 200. . .\n",
       "Trained model in 0.0030 seconds\n",
       "Made predictions in 0.0010 seconds.\n",
-      "F1 score for training set: 0.4396.\n",
+      "F1 score for training set: 0.8406.\n",
       "Made predictions in 0.0010 seconds.\n",
-      "F1 score for test set: 0.3125.\n",
-      "Training a GaussianNB using a training set size of 200. . .\n",
-      "Trained model in 0.0020 seconds\n",
+      "F1 score for test set: 0.7244.\n",
+      "Training a GaussianNB using a training set size of 300. . .\n",
+      "Trained model in 0.0030 seconds\n",
       "Made predictions in 0.0020 seconds.\n",
-      "F1 score for training set: 0.5294.\n",
+      "F1 score for training set: 0.8038.\n",
       "Made predictions in 0.0010 seconds.\n",
-      "F1 score for test set: 0.3916.\n",
-      "Training a GaussianNB using a training set size of 237. . .\n",
-      "Trained model in 0.0020 seconds\n",
-      "Made predictions in 0.0010 seconds.\n",
-      "F1 score for training set: 0.8148.\n",
-      "Made predictions in 0.0010 seconds.\n",
-      "F1 score for test set: 0.6974.\n",
+      "F1 score for test set: 0.7634.\n",
       "Training a SVC using a training set size of 100. . .\n",
-      "Trained model in 0.0040 seconds\n",
-      "Made predictions in 0.0040 seconds.\n",
-      "F1 score for training set: 0.8861.\n",
-      "Made predictions in 0.0080 seconds.\n",
-      "F1 score for test set: 0.7559.\n",
-      "Training a SVC using a training set size of 200. . .\n",
-      "Trained model in 0.0210 seconds\n",
-      "Made predictions in 0.0070 seconds.\n",
-      "F1 score for training set: 0.8841.\n",
-      "Made predictions in 0.0070 seconds.\n",
-      "F1 score for test set: 0.7698.\n",
-      "Training a SVC using a training set size of 237. . .\n",
-      "Trained model in 0.0130 seconds\n",
-      "Made predictions in 0.0090 seconds.\n",
+      "Trained model in 0.0030 seconds\n",
+      "Made predictions in 0.0030 seconds.\n",
       "F1 score for training set: 0.8777.\n",
-      "Made predictions in 0.0060 seconds.\n",
-      "F1 score for test set: 0.7581.\n",
+      "Made predictions in 0.0020 seconds.\n",
+      "F1 score for test set: 0.7746.\n",
+      "Training a SVC using a training set size of 200. . .\n",
+      "Trained model in 0.0110 seconds\n",
+      "Made predictions in 0.0090 seconds.\n",
+      "F1 score for training set: 0.8679.\n",
+      "Made predictions in 0.0050 seconds.\n",
+      "F1 score for test set: 0.7815.\n",
+      "Training a SVC using a training set size of 300. . .\n",
+      "Trained model in 0.0240 seconds\n",
+      "Made predictions in 0.0150 seconds.\n",
+      "F1 score for training set: 0.8761.\n",
+      "Made predictions in 0.0130 seconds.\n",
+      "F1 score for test set: 0.7838.\n",
       "Training a LogisticRegression using a training set size of 100. . .\n",
       "Trained model in 0.0030 seconds\n",
-      "Made predictions in 0.0010 seconds.\n",
-      "F1 score for training set: 0.8919.\n",
-      "Made predictions in 0.0010 seconds.\n",
-      "F1 score for test set: 0.7586.\n",
-      "Training a LogisticRegression using a training set size of 200. . .\n",
-      "Trained model in 0.0050 seconds\n",
-      "Made predictions in 0.0010 seconds.\n",
-      "F1 score for training set: 0.8718.\n",
-      "Made predictions in 0.0010 seconds.\n",
-      "F1 score for test set: 0.7554.\n",
-      "Training a LogisticRegression using a training set size of 237. . .\n",
-      "Trained model in 0.0060 seconds\n",
       "Made predictions in 0.0000 seconds.\n",
-      "F1 score for training set: 0.8676.\n",
+      "F1 score for training set: 0.8593.\n",
+      "Made predictions in 0.0000 seconds.\n",
+      "F1 score for test set: 0.7647.\n",
+      "Training a LogisticRegression using a training set size of 200. . .\n",
+      "Trained model in 0.0080 seconds\n",
+      "Made predictions in 0.0000 seconds.\n",
+      "F1 score for training set: 0.8562.\n",
       "Made predictions in 0.0010 seconds.\n",
-      "F1 score for test set: 0.7544.\n"
+      "F1 score for test set: 0.7914.\n",
+      "Training a LogisticRegression using a training set size of 300. . .\n",
+      "Trained model in 0.0080 seconds\n",
+      "Made predictions in 0.0010 seconds.\n",
+      "F1 score for training set: 0.8468.\n",
+      "Made predictions in 0.0010 seconds.\n",
+      "F1 score for test set: 0.8060.\n"
      ]
     }
    ],
@@ -582,25 +582,25 @@
     "\n",
     "| Training Set Size | Training Time           | Prediction Time (test) | F1 Score (train) | F1 Score (test) |\n",
     "| :---------------: | :---------------------: | :--------------------: | :--------------: | :-------------: |\n",
-    "| 100               |     0.0030              |     0.0010             |    0.4396        |    0.3125       |\n",
-    "| 200               |     0.0020              |     0.0010             |    0.5294        |    0.3916       |\n",
-    "| 300               |     0.0020              |     0.0010             |    0.8148        |    0.6974       |\n",
+    "| 100               |     0.0020              |     0.0010             |    0.8467        |    0.8029       |\n",
+    "| 200               |     0.0030              |     0.0010             |    0.8406        |    0.7244       |\n",
+    "| 300               |     0.0030              |     0.0010             |    0.8038        |    0.7634       |\n",
     "\n",
     "** Classifer 2 - Support Vector Machine**  \n",
     "\n",
     "| Training Set Size | Training Time | Prediction Time (test) | F1 Score (train) | F1 Score (test) |\n",
     "| :---------------: | :---------------------: | :--------------------: | :--------------: | :-------------: |\n",
-    "| 100               |     0.0040              |      0.0080            |    0.8861        |    0.7559       |\n",
-    "| 200               |     0.0210              |      0.0070            |    0.8841        |    0.7698       |\n",
-    "| 300               |     0.0090              |      0.0060            |    0.8777        |    0.7581       |\n",
+    "| 100               |     0.0030              |      0.0020            |    0.8777        |    0.7746       |\n",
+    "| 200               |     0.0110              |      0.0050            |    0.8679        |    0.7815       |\n",
+    "| 300               |     0.0240              |      0.0130            |    0.8761        |    0.7838       |\n",
     "\n",
     "** Classifer 3 - Logistic Regression**  \n",
     "\n",
     "| Training Set Size | Training Time | Prediction Time (test) | F1 Score (train) | F1 Score (test) |\n",
     "| :---------------: | :---------------------: | :--------------------: | :--------------: | :-------------: |\n",
-    "| 100               |     0.0030              |      0.0010            |     0.8919       |     0.7586      |\n",
-    "| 200               |     0.0050              |      0.0010            |     0.8718       |     0.7554      |\n",
-    "| 300               |     0.0060              |      0.0010            |     0.8676       |     0.7544      |"
+    "| 100               |     0.0030              |      0.0000            |     0.8593       |     0.7647      |\n",
+    "| 200               |     0.0080              |      0.0010            |     0.8562       |     0.7914      |\n",
+    "| 300               |     0.0080              |      0.0010            |     0.8468       |     0.8060      |"
    ]
   },
   {
@@ -672,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 72,
    "metadata": {
     "collapsed": false
    },
@@ -682,9 +682,9 @@
      "output_type": "stream",
      "text": [
       "Made predictions in 0.0010 seconds.\n",
-      "Tuned model has a training F1 score of 0.8407.\n",
-      "Made predictions in 0.0000 seconds.\n",
-      "Tuned model has a testing F1 score of 0.7711.\n"
+      "Tuned model has a training F1 score of 0.8358.\n",
+      "Made predictions in 0.0010 seconds.\n",
+      "Tuned model has a testing F1 score of 0.7778.\n"
      ]
     }
    ],
@@ -732,8 +732,8 @@
    "metadata": {},
    "source": [
     "**Answer: **\n",
-    "Final Model F1 score for training data is 0.8407 but testing data it is 0.7711.\n",
-    "Before tuning the best F1 score on testing data is 0.7544. It seems that tuned model gives us the better score."
+    "Final Model F1 score for training data is 0.8358 but testing data it is 0.7778.\n",
+    "Before tuning the best F1 score on testing data is 0.8060. It seems that tuned model doesn't gives us the better score as compared than preliminary result."
    ]
   },
   {
