smartcab visual update

--- a/smartcab/smartcab.ipynb
+++ b/smartcab/smartcab.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -81,7 +81,7 @@
    "source": [
     "**Answer:**\n",
     "\n",
-    "No Smartcab is not moving at all, it is static at one place.\n",
+    "No Smartcab is not moving at all, it is static at one placefor evert trial. It changes its position only once in the starting of new trial.\n",
     "\n",
     "\n",
     "Award is positive when agent is ideal on red light. \n",
@@ -90,7 +90,7 @@
     "\n",
     "\n",
     "When there is a red light, agent awarded positivily because agent is not moving.\n",
-    "But in other case like when the light is green it awarded negatively because agent "
+    "But in other case like when the light is green it awarded negatively because agent is not moving."
    ]
   },
   {
@@ -116,7 +116,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer:**"
+    "**Answer:**\n",
+    "\n",
+    "In agent.py 3 flags are -\n",
+    "\n",
+    "1.> verbose - set to True to display additional output from the simulation\n",
+    "\n",
+    "2.> learning - set to True to force the driving agent to use Q-learning\n",
+    "\n",
+    "3.> enforce_deadline - set to True to enforce a deadline metric\n",
+    "\n",
+    "\n",
+    "In the environment.py Python file, DummyAgent class function is called to perform an action.\n",
+    "\n",
+    "Difference between the 'render_text()' and render() function.\n",
+    "\n",
+    "render() - This is the GUI render display of the simulation. \n",
+    "            Supplementary trial data can be found from render_text.\n",
+    "\n",
+    "render_text() - This is the non-GUI render display of the simulation. \n",
+    "            Simulated trial data will be rendered in the terminal/command prompt.\n",
+    "            \n",
+    "            \n",
+    "In the planner.py Python file, will the 'next_waypoint() function consider the North-South or East-West direction first?\n",
+    "\n"
    ]
   },
   {
