question answered related to q-learning graph

--- a/smartcab/smartcab.ipynb
+++ b/smartcab/smartcab.ipynb
@@ -373,7 +373,8 @@
    "cell_type": "code",
    "execution_count": 27,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -410,7 +411,16 @@
    "metadata": {},
    "source": [
     "**Answer:**\n",
-    "\n"
+    "\n",
+    "Only The Reliability Rating Failure is similar in both basic driving agent and default Q-Learning agent.\n",
+    "\n",
+    "Before testing driving agent it require 20 training trial. Yes  te no make sense given the epsilon-tolerance.\n",
+    "\n",
+    "Yes the decaying function implemented for $\\epsilon$ (the exploration factor) accurately represented in the parameters panel.\n",
+    "\n",
+    "As the no of trials increased, the no of bad actions didn't increase. yes the average award increase.\n",
+    "\n",
+    "Safey has increased but reliability is still the same while comparing the initial driving agent.\n"
    ]
   },
   {
