--- a/smartcab/smartcab.ipynb
+++ b/smartcab/smartcab.ipynb
@@ -580,7 +580,25 @@
    "source": [
     "**Answer:**\n",
     "\n",
-    "Couldn't figure out much. Need help here."
+    "Here are some questions to guide you towards the characteristics we're looking for here.\n",
+    "\n",
+    "Let's start with the characteristic of the agent:\n",
+    "\n",
+    "Does it have a local viewpoint? Does it know the concrete location of the destination?\n",
+    "In other words, can we determine how far the agent is from the destination by looking at the current state?\n",
+    "Thus, is it possible to propagate rewards towards states that are \"close to the destination\"?\n",
+    "And here are the questions for the characteristic of the environment:\n",
+    "\n",
+    "Let's assume that the previous issue was not present; the states are linked to specific intersections, and because of that it is possible to determine how close each state is to the current destination.\n",
+    "Does the location of the destination stay the same over the trials?\n",
+    "Thus, if we propagated rewards away from the destination, after a while, how many of the intersections would we be propagating rewards from?\n",
+    "\n",
+    "\n",
+    "Here are some hints to help you get going in the final (optional) question:\n",
+    "\n",
+    "What kind of information does the smartcab receive from the environment? Does it receive \"global\" information, such as its position relative to the destination? Or merely \"local\" information such as the status of the intersection it's in?\n",
+    "Do the agent and the destination begin each trial in the same place, or do they move around? Can the agent learn the best route by rote?\n",
+    "Is there an \"extra reward\" for reaching the destination? In other words, is there anything to propagate back, other than the reward for obeying traffic rules and following the planner?"
    ]
   },
   {
