--- a/student_intervention/student_intervention.ipynb
+++ b/student_intervention/student_intervention.ipynb
@@ -748,9 +748,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [Root]",
+   "display_name": "Python [conda env:MLND]",
    "language": "python",
-   "name": "Python [Root]"
+   "name": "conda-env-MLND-py"
   },
   "language_info": {
    "codemirror_mode": {
