Complete Titanic Survival Exploration

--- a/titanic_survival_exploration/titanic_survival_exploration.ipynb
+++ b/titanic_survival_exploration/titanic_survival_exploration.ipynb
@@ -772,7 +772,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer**: *Replace this text with your answer to the question above.*"
+    "**Answer**: 80.2%"
    ]
   },
   {
